# lambda-box-extraction

./: .gitignore  Makefile  README.md  _CoqProject  box_to_wasm.md  coq-lambda-box-extraction.opam  dune-project  extraction.md
.github/workflows/: build.yml  coq-lambda-box-extraction.opam.locked
doc/: dev.md  extraction.md
examples/: Makefile  map-coq.tast  map.tast  stlc.ast  stlc.wasm  test-term.ast  test.ast  test.wasm  test2.ast
patches/: axioms.diff  int.diff  int.patch  misc.diff  patch.sh  sexp.diff
src/: dune
src/extraction/: dune
src/printC/: caml_ascii_string.ml  caml_byte.ml  caml_byte.mli  caml_bytestring.ml  caml_nat.ml  caml_nat.mli  camlcoq.ml  dune  printAST.ml  printClight.ml  printCsyntax.ml
src2/: caml_bytestring.ml  caml_nat.ml  camlcoq.ml  dune  printAST.ml  printCsyntax.ml
test/: .gitignore  Makefile  README.md  package-lock.json  package.json  run-wasmtime.py
test/agda/: BigDemo.ast  BigDemo.tast  Demo.ast  Demo.tast  Demo2.ast  Demo2.tast  Equality.ast  Equality.tast  EtaCon.ast  EtaCon.tast  Hello.ast  Hello.tast  Imports.ast  Imports.tast  Irr.ast  Irr.tast  K.ast  K.tast  Levels.ast  Levels.tast  Map.ast  Map.tast  Mutual.ast  Mutual.tast  Nat.ast  Nat.tast  OddEven.ast  OddEven.tast  PatternLambda.ast  PatternLambda.tast  Proj.ast  Proj.tast  README.md  STLC.ast  STLC.tast  Test.ast  Test.tast  Types.ast  Types.tast  With.ast  (+1 more)
test/src/: c.ts  elm.ts  ocaml.ts  runner.ts  rust.ts  tests.ts  types.ts  utils.ts  wasm.ts
theories/: CeresExtra.v  CertiCoqPipeline.v  CheckWf.v  CoqToLambdaBox.v  ErasurePipeline.v  Eval.v  EvalAnf.v  EvalBox.v  ExtractSerializers.v  Extraction.v  LambdaBoxToC.v  LambdaBoxToElm.v  LambdaBoxToOCaml.v  LambdaBoxToRust.v  LambdaBoxToWASM.v  LambdaBoxToWasm.v  SerializeCommon.v  SerializeEAst.v  SerializeExAst.v  SerializePrimitives.v  Translations.v  TypedTransforms.v
theories/serialization/: CeresExtra.v  Serialize.v  SerializeCommon.v  SerializeCommonComplete.v  SerializeCommonSound.v  SerializeEAst.v  SerializeEAstComplete.v  SerializeEAstSound.v  SerializeExAst.v  SerializeExAstComplete.v  SerializeExAstSound.v  SerializePrimitives.v  SerializePrimitivesComplete.v  SerializePrimitivesSound.v
