opam-version: "2.0"
name: "coq-lambda-box-extraction"
version: "dev"
synopsis: "Coq extraction"
description: """
A framework for extracting lambda box programs
"""
maintainer: "The COBRA team"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/lambda-box-extraction"
dev-repo: "git+https://github.com/AU-COBRA/lambda-box-extraction.git"
bug-reports: "https://github.com/AU-COBRA/lambda-box-extraction/issues"

depends: [
  "coq" {>= "8.19" & < "8.20~"}
  "coq-metacoq-utils" {= "1.3.2+8.19"}
  "coq-metacoq-common" {= "1.3.2+8.19"}
  "coq-metacoq-template" {= "1.3.2+8.19"}
  "coq-metacoq-template-pcuic" {= "1.3.2+8.19"}
  "coq-metacoq-pcuic" {= "1.3.2+8.19"}
  "coq-metacoq-safechecker" {= "1.3.2+8.19"}
  "coq-metacoq-erasure" {= "1.3.2+8.19"}
  "coq-rust-extraction"
  "coq-elm-extraction"
  "coq-certicoq" {= "dev"}
  "coq-wasm" {= "dev"}
  "coq-primitive" {= "8.19.dev"}
  "ppx_sexp_conv"
  "sexplib"
]

pin-depends: [
  ["coq-certicoq.dev" "git+https://github.com/womeier/certicoqwasm.git#ab6668af03f72c15550ff223de1baa7b45a49569"]
  ["coq-wasm.dev" "git+https://github.com/womeier/wasmcert-coq.git#88a42ee"]
  ["coq-metacoq-utils.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-common.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-template.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-template-pcuic.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-pcuic.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-safechecker.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-safechecker-plugin.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-erasure.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-metacoq-erasure-plugin.1.3.2+8.19" "git+https://github.com/MetaCoq/metacoq.git#a9f5da7534b62cda3c870e64f00998e7ee5485f5"]
  ["coq-primitive.8.19.dev" "git+https://github.com/palmskog/coq-primitive.git"]
]

tags: [
  "keyword:extraction"
  "logpath:LambdaBox"
]
