opam-version: "2.0"
name: "coq-lambda-box-extraction"
version: "dev"
synopsis: "Coq extraction"
description: """
A framework for extracting lambda box programs
"""
maintainer: "The COBRA team"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/lambda-box-extraction"
dev-repo: "git+https://github.com/AU-COBRA/lambda-box-extraction.git"
bug-reports: "https://github.com/AU-COBRA/lambda-box-extraction/issues"

depends: [
  "coq" {>= "8.19" & < "8.20~"}
  "coq-rust-extraction"
  "coq-elm-extraction"
  "coq-metacoq-utils" {= "1.3.3+8.19"}
  "coq-metacoq-common" {= "1.3.3+8.19"}
  "coq-metacoq-template" {= "1.3.3+8.19"}
  "coq-metacoq-template-pcuic" {= "1.3.3+8.19"}
  "coq-metacoq-pcuic" {= "1.3.3+8.19"}
  "coq-metacoq-safechecker" {= "1.3.3+8.19"}
  "coq-metacoq-erasure" {= "1.3.3+8.19"}
  "coq-certicoq" {= "dev"}
  "coq-wasm" {= "dev"}
  "coq-primitive" {= "8.19.dev"}
  "coq-ceres"
]

pin-depends: [
  ["coq-certicoq.dev" "git+https://github.com/4ever2/certicoqwasm.git#36c16acc63f91b4331625327af91ad124935fbb0"]
  ["coq-wasm.dev" "git+https://github.com/womeier/wasmcert-coq.git#88a42ee"]
  ["coq-primitive.8.19.dev" "git+https://github.com/palmskog/coq-primitive.git"]
]

tags: [
  "keyword:extraction"
  "logpath:LambdaBox"
]
